<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Wallet</string>
    
    <string name="action_add_details">Add Details</string>
    <string name="action_save">Save</string>
    <string name="action_notes">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="db_name">wallet.sqlite</string>
    
    <!-- Common Strings -->
    <string name="others">Others</string>
    <string name="name">Name</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="pref_name">Wallet</string>
    <string name="pref_wallet_password">pref_wallet_password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password_required">Password Required</string>
    <string name="password_not_matched">Both Passwords does not match.</string>
    <string name="password_not_valid">Not valid password.</string>
    <string name="password_criteria">Password must be of 4 digits</string>
    
    <string name="add_details_card_visa">Visa</string>
    <string name="add_details_card_master">Master</string>
    <string name="add_details_card_mastero">Mastero</string>
    <string name="add_details_card_type">Card Type</string>
    <string name="add_details_card_usertype">Card User Type</string>
    <string name="add_details_card_usertype_personal">Personal</string>
    <string name="add_details_card_usertype_business">Business</string>
    <string name="add_details_card_bankname">Bank Name</string>
    <string name="add_details_card_bankaccountnumber">Bank Account Number</string>
    <string name="add_details_card_bankcustomerid">Bank Cusomer Id</string>
    <string name="add_details_card_number">Card Number</string>
    <string name="add_details_card_holdername">Card Holder Name</string>
    <string name="add_details_card_cvvnumber">CVV Number</string>
    <string name="add_details_card_show_cvvnumber">Show CVV Number</string>
    <string name="add_details_card_atmpinmumber">Card ATM Pin Number</string>
    <string name="add_details_card_show_atmpinmumber">Show ATM Pin Number</string>
    <string name="add_details_card_transactionpassword">Card Transaction Password</string>
    <string name="add_details_card_mobilepinnumber">Mobile Tele Pin Number</string>
    <string name="add_details_card_show_mobilepinnumber">Show Mobile Tele Pin Number</string>
    <string name="add_details_card_show_transactionpassword">Show Password</string>
    <string name="add_details_card_validfrom">Valid From</string>
    <string name="add_details_card_validtill">Valid Till</string>
    <string name="add_details_card_frontimage">CardFront Image</string>
    <string name="add_details_card_backimage">Card Back Image</string>
    
    <!-- Bank Details -->
    <string name="add_bankdetails_bankname">Bank Name</string>
    <string name="add_bankdetails_profilename">Profile Name</string>
    <string name="add_bankdetails_bankaccountnumber">Bank Account Number</string>
    <string name="add_bankdetails_balance">Balance</string>
    <string name="add_bankdetails_bankcustomerid">Bank Customer Id</string>
    <string name="add_bankdetails_loginusername">Login UserName</string>
    <string name="add_bankdetails_show_loginpassword">Show Login Password</string>
    <string name="add_bankdetails_loginpassword">Login Password</string>
    <string name="add_bankdetails_transactionpassword">Transaction Password</string>
    <string name="add_bankdetails_show_transactionpassword">Show Transaction Password</string>
    <string name="add_bankdetails_mobilepinnumber">Mobile Pin Number</string>
    <string name="add_bankdetails_show_mobilepinnumber">Show Mobile Pin Number</string>
    
     <!-- Loan Details -->
    <string name="add_loandetails_loanaccountnumber">Loan Account Number</string>
    <string name="add_loandetails_bankname">Bank Name</string>
    <string name="add_loandetails_branchname">Branch Name</string>
    <string name="add_loandetails_loandate">Loan Date</string>
    <string name="add_loandetails_sanctiondate">Sanction Date</string>
    <string name="add_loandetails_selectdate">Select Date</string>
    <string name="add_loandetails_emi">EMI</string>
    <string name="add_loandetails_rateofinterest">Rate Of Interest</string>
    <string name="add_loandetails_tenure">Tenure</string>
    <string name="add_loandetails_loanamount">Loan Amount</string>
    <string name="add_loandetails_distributedamount">Distributed Amount</string>
    <string name="add_loandetails_outstandingamount">Outstanding Amount</string>
    
    <!-- Social -->
    <string name="add_socialdetails_emailaddress">Email Address</string>
    <string name="add_socialdetails_password">Password</string>
    <string name="add_socialdetails_show_password">Show Password</string>
    
    <!-- Notes -->
    <string name="add_notesdetails_description">Description</string>
    
    <!-- Others -->
    <string name="add_otherdetails_description">Description</string>
    <string name="add_otherdetails_image">Image</string>
    
    <string name="error_enter_name">Please Enter Name</string>
		
    <string-array name="titles">
        <item>Cards Details</item>
        <item>Bank Details</item>
        <item>Loan Details</item>
        <item>Driver License Details</item>
        <item>Passport Details</item>
        <item>Notes</item>
        <item>Social</item>
        <item>Other Details</item>
        
    </string-array>
    
    <string-array name="months">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    
    <string-array name="validfromyears">
        <item>-</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
    </string-array>
    
   	<string-array name="validthruyears">
   	    <item>-</item>
		<item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    
   	<!-- Crop Image Strings -->
   	<string name="cancel">Cancel</string>
   	<string name="save">Save</string>
   	<string name="saving_image">Saving image</string>
   	<string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
</resources>
