<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3" >

        <com.khushnish.mywallet.utils.TextViewRoboto
            android:id="@+id/fragment_add_details_txt_cardtype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:singleLine="true"
            android:text="@string/add_details_card_number"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical" >

            <com.khushnish.mywallet.utils.RadioButtonRoboto
                android:id="@+id/fragment_add_carddetails_rb_visa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:singleLine="true"
                android:text="@string/add_details_card_visa"
                android:textSize="15sp" />

            <com.khushnish.mywallet.utils.RadioButtonRoboto
                android:id="@+id/fragment_add_carddetails_rb_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_details_card_master"
                android:textSize="15sp" />

            <com.khushnish.mywallet.utils.RadioButtonRoboto
                android:id="@+id/fragment_add_carddetails_rb_mastero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_details_card_mastero"
                android:textSize="15sp" />

            <com.khushnish.mywallet.utils.RadioButtonRoboto
                android:id="@+id/fragment_add_carddetails_rb_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_details_card_other"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3" >

        <com.khushnish.mywallet.utils.TextViewRoboto
            android:id="@+id/fragment_add_details_txt_cardnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:singleLine="true"
            android:text="@string/add_details_card_number" />

        <com.khushnish.mywallet.utils.EditTextRoboto
            android:id="@+id/fragment_add_details_edt_cardnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1.5"
            android:hint="@string/add_details_card_number"
            android:inputType="number"
            android:textSize="15sp"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <com.khushnish.mywallet.utils.EditTextRoboto
        android:id="@+id/fragment_add_details_edt_cardholdername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/add_details_card_holdername"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <com.khushnish.mywallet.utils.EditTextRoboto
        android:id="@+id/fragment_add_details_edt_cvvnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/add_details_card_cvvnumber"
        android:inputType="numberPassword"
        android:maxLength="3"
        android:singleLine="true" />

    <com.khushnish.mywallet.utils.EditTextRoboto
        android:id="@+id/fragment_add_details_edt_cardtransactionpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/add_details_card_transactionpassword"
        android:inputType="textPassword"
        android:singleLine="true" />

</LinearLayout>