<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical" >

        <com.khushnish.mywallet.utils.TextViewRoboto
            android:id="@+id/fragment_newuserlogin_txt_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/abc_action_bar_subtitle_text_size" />

        <com.khushnish.mywallet.utils.EditTextRoboto
            android:id="@+id/fragment_newuserlogin_edt_newpassword4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="numberPassword"
            android:lines="1"
            android:maxEms="4"
            android:maxLength="4"
            android:textSize="@dimen/abc_action_bar_subtitle_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <com.khushnish.mywallet.utils.TextViewRoboto
            android:id="@+id/fragment_newuserlogin_txt_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password"
            android:textSize="@dimen/abc_action_bar_subtitle_text_size" />

        <com.khushnish.mywallet.utils.EditTextRoboto
            android:id="@+id/fragment_newuserlogin_edt_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="numberPassword"
            android:lines="1"
            android:maxEms="4"
            android:maxLength="4"
            android:textSize="@dimen/abc_action_bar_subtitle_text_size" />
    </LinearLayout>

    <com.khushnish.mywallet.utils.ButtonRoboto
        android:id="@+id/fragment_newuserlogin_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register" />

</LinearLayout>