<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/name"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_bankname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_bankname"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_bankname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/add_bankdetails_bankname"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_profilename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_profilename"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_profilename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/add_bankdetails_profilename"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_bankaccountnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_bankaccountnumber"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_bankaccountnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/add_bankdetails_bankaccountnumber"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_balance"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/add_bankdetails_balance"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_bankcustomerid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_bankcustomerid"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_bankcustomerid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/add_bankdetails_bankcustomerid"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_loginusername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_loginusername"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_loginusername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/add_bankdetails_loginusername"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_loginpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_bankdetails_loginpassword"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1.8"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:weightSum="3" >

                <com.khushnish.mywallet.utils.EditTextRoboto
                    android:id="@+id/fragment_add_bankdetails_edt_loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_bankdetails_loginpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <com.khushnish.mywallet.utils.CheckBoxRoboto
                    android:id="@+id/fragment_add_bankdetails_chk_loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/add_bankdetails_show_loginpassword"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_transactionpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="false"
                android:text="@string/add_bankdetails_transactionpassword"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1.8"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:weightSum="3" >

                <com.khushnish.mywallet.utils.EditTextRoboto
                    android:id="@+id/fragment_add_bankdetails_edt_transactionpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/add_bankdetails_transactionpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <com.khushnish.mywallet.utils.CheckBoxRoboto
                    android:id="@+id/fragment_add_bankdetails_chk_showtransactionpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/add_bankdetails_show_transactionpassword"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_cardmobilepinumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/add_details_card_mobilepinnumber"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1.8"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:weightSum="3" >

                <com.khushnish.mywallet.utils.EditTextRoboto
                    android:id="@+id/fragment_add_bankdetails_edt_mobilepinumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_details_card_mobilepinnumber"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <com.khushnish.mywallet.utils.CheckBoxRoboto
                    android:id="@+id/fragment_add_bankdetails_chk_mobilepinumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/add_bankdetails_show_mobilepinnumber"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.khushnish.mywallet.utils.TextViewRoboto
                android:id="@+id/fragment_add_bankdetails_txt_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:singleLine="true"
                android:text="@string/others"
                android:textSize="12sp" />

            <com.khushnish.mywallet.utils.EditTextRoboto
                android:id="@+id/fragment_add_bankdetails_edt_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:hint="@string/others"
                android:inputType="textMultiLine"
                android:lines="3"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />
    </LinearLayout>

</ScrollView>